@@ -31,27 +31,15 @@
  * ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
  * POSSIBILITY OF SUCH DAMAGE.
  */
-/* Some implementation notes:
- * * we don't check the validity of passed-in values (including pointers to 
- *   stacks): that will only slow down the program and there is no need to
- *   guard against foolish use. If you pass in a stack that does not exist,
- *   the behaviour is undefined.
- * Every function is also accompanied with its own notes..
- * All the actual magic is in two very common parts: a loop 
- *    while (compare_and_exchange(&curr, &(stack->top), NULL) != 0);
- * that selects the current top and sets it to NULL so what we work on can't
- * be edited from under our nose, and a more complicated function called 
- * append_to_stack which appends the contents of a stack to a perhaps-edited
- * or perhaps-being-edited stack.
- */
-#include "stack.h"
+/* Implementation notes:
+ * This implementation is currently sensitive to the ABA problem. Other than 
+ * that, I don't currently see any problems with it. To get rid of the ABA
+ * problem, we need a memory manager and plug it in where we use malloc and
+ * free */
+#include <stdlib.h>
 
-struct _stack_node_t {
-	void 	* val;
-	struct _stack_node_t * next;
-	struct _stack_node_t * prev;
-	int removed;
-} stack_node_t;
+#include <compare_and_exchange.h>
+#include "stack.h"
 
 /* This one is easy: we are the only ones working on the stack because it 
  * has not been made available to anyone else yet :) */
@@ -88,143 +76,58 @@ void free_stack(stack_t * stack)
 	free(stack);
 }
 
-/* This is a helper function. It appends the node NODE to the stack STACK. we 
- * assume a number of important things:
- * * NODE->prev points the the bottom of the node list
- * * the node list cannot change during the execution of this function (is not
- *   attached to any stack)
- */
-inline void append_stack(stack_t * stack, stack_node_t * node)
-{
-	stack_node_t * top = NULL;
-	stack_node_t * bottom = NULL;
-	stack_node-t * temp = NULL;
-
-	/* Now we must get the last node in the stack, to put the passed nodes under it.
-	 * For the top node, we know the following:
-	 * * the prev pointer points to the bottom of the stack - if NULL it is the 
-	 *   bottom, but in that case it might also point to itself
-	 * * stack->top == NULL if there is nothing in the stack
-	 * We'll test the latter first :)
-	 */
-	while (compare_and_exchange(&top, &(stack->top), node) != 0)
-	{
-		/* If the compare_and_exchange operation had succeeded (returned 0) the
-		 * curr pointer would have been set as top of the stack and we would be
-		 * done. This is not the case so top now contains the "current" top. The
-		 * prev pointer should point to the bottom, but might change by the time
-		 * we read it 
-		 * The only way to know that we're looking at the bottom is to look if the
-		 * next pointer is NULL. Otherwise, we were no longer looking at the top
-		 * and we should seek the top out again.
-		 */
-		while (compare_and_exchange(&bottom, &(top->prev), node->prev) != 0)
-		{
-			if (bottom->next != NULL)
-			{
-				top = NULL;
-				bottom = NULL;
-				continue
-			}
-		}
-		/* Now, the bottom of our "old" stack is the bottom of the new one, but 
-		 * we haven't made the old one available through the new one yet. */
-		if (bottom == NULL)
-			bottom = top;
-		if (compare_and_exchange(&temp, &(bottom->next), node) != 0)
-		{
-			/* if we get here, the bottom is no longer the bottom. This should be
-			 * impossible, because a stack only has write operations on the top.
-			 * We handle the situation by re-starting the procedure */
-			top = bottom = temp = NULL;
-			continue;
-		}
-		/* When we get here, the old stack's bottom is at the bottom and the old
-		 * stack's top has been appended to the new one. All is done.
-		 */
-		break;
-	}
-}
-
-/* Although we guarantee not to write to the stack, we interprete that 
- * guarantee as not making any netto changed to the stack. It's much easier 
- * to guarantee a coherent answer if we do some writing anyway :) */
 void * stack_top(stack_t * stack)
 {
-	stack_node_t * curr = NULL;
+	stack_node_t * curr;
 	void * retval;
-
-	/* We select the node we work from making it undeletable :) */
-	while (compare_and_exchange(&curr, &(stack->top), NULL) != 0);
-	
-	/* If the node we just selected is anything, we return its value */
-	if (curr)
+	do
 	{
-		retval = curr->val;
-	}
-	else
-	{ 	/* otherwise, there is nothing to do */
-		return(NULL);
-	}
-
-	/* Now, we have a really nice inline function that takes care of 
-	 * putting the rest of the nodes back in the stack.. */
-	append_stack(stack, curr);
-
-	return(retval);
+		curr = stack->top;
+		if (curr)
+		{
+			retval = curr->val;
+		} else retval = NULL;
+	} while (curr == stack->top);
+	
+	return retval;
 }
 
-/* Easier than we might think: we'll use the append_stack function to append 
- * the next node (the one just under the top) to the stack when we've deleted
- * the top one */
 int stack_pop(stack_t * stack)
 {
 	stack_node_t * curr;
-	stack_node_t * next;
+	int retval;
 	
-	/* We select the top node, which we will be working on */
-	while (compare_and_exchange(&curr, &(stack->top), NULL) != 0);
-
-	if (curr)
+	while (1)
 	{
-		next = curr->next;
-		if (next)
+		curr = stack->top;
+		if (curr)
 		{
-			next->prev = curr->prev;
-			append_to_stack(stack, next);
+			if (compare_and_exchange(&curr, &(stack->top), curr->next) == 0)
+			{
+				free(curr);
+				retval = 1;
+				break;
+			}
 		}
-		free(curr);
+		else 
+		{
+			retval = 0;
+			break;
+		}
 	}
-	else
-		return(0);
-
-	return(1);
+	
+	return retval;
 }
 
-/* We once again select the top node because we will be working on it. We 
- * make a new node which we fill with the value, the next pointer (the 
- * current top) and the prev pointer (the current bottom, or the new node 
- * if there is none). We will then put it back on the stack, at the bottom, 
- * with our friendly inline append_to_stack function. */
 void stack_push(stack_t * stack, void * val)
 {
+	stack_node_t * new_node = (stack_node_t*)malloc(sizeof(stack_node_t));
 	stack_node_t * top = NULL;
-	/* make the new node */
-	stack_node_t * curr = (stack_node_t *)malloc(sizeof(stack_node_t));
-	curr->prev = curr;
-	curr->val = val;
-
-	/* select the current top */
-	while (compare_and_exchange(&top, &(stack->top), NULL) != 0);
-	/* adapt the new node and the current top to eachother */
-	if (top != NULL)
+	
+	new_node->val = val;
+	new_node->next = NULL;
+	while (compare_and_exchange(&top, &(stack->top), new_node) != 0)
 	{
-		curr->prev = top->prev;
-		top->prev = curr;
+		new_node->next = top;
 	}
-	curr->next = top;
-
-	/* and hang on */
-	append_to_stack(stack, curr);
 }
-
